arabesque review styling added

--- a/app/assets/stylesheets/releasedetail.css
+++ b/app/assets/stylesheets/releasedetail.css
@@ -5,6 +5,13 @@
 	margin:23px 0px 0px 0px;
 	width:410px;
 }
+.reviews2 {
+	font-size:24px;
+	line-height:20px;
+	font-weight:600;
+	margin:94px 0px 0px 0px;
+	width:380px;
+}
 .description {
 	font-family:"helvetica";
 	color:#949393;
