--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,16 +2,13 @@
  * This is a manifest file that'll automatically include all the stylesheets available in this directory
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
- *= require base
- *= require bootstrap_and_overrides
- *= require jquery.ui.datepicker
- *= require headfoot
+
  *= require cms
- *= require home
  *= require_self
- *= require releasedetail
  *= require shared
- *= require photographs
+ *= require project-slider
+ *= require reset
+ *= require grid
  *= require style
  *= require slider
  *= require elements
