--- a/app/assets/stylesheets/shared.css
+++ b/app/assets/stylesheets/shared.css
@@ -1,64 +1,6 @@
 @charset "UTF-8";
 /* CSS Document */
 
-.container {
-	width:100%;
-	height:1200px;
-	max-width:945px;
-	margin:0 auto;
-	clear:right;
-	z-index:100;
-	background-image:url('gri.png');
-	background-repeat:no-repeat;
-}
-.padder {float:left; padding-bottom:150px;}
-html, body {
-	height: 100%;
-	width:100%;
-	background-color:#f5f5f5;
-	font-size:100.01%;
-}
-html, html a {
-    -webkit-font-smoothing: antialiased;
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
-}
-img.grayscale {
-    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+ */
-    filter: gray; /* IE6-9 */
-    -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
-    -webkit-transition: all .6s ease; /* Fade to color for Chrome and Safari */
-    -webkit-backface-visibility: hidden; /* Fix for transition flickering */
-}
-#rulers{position:absolute;margin-top:432px;}
-.left {float:left;margin:1px 49px 0px 1px;}
-.right {float:right;}
-.title {
-	text-align:left;
-	font-family:"futura";
-	font-style:italic;
-	letter-spacing:0.05em;
-	font-size:1.2em;
-	font-weight:400;
-}
-.tenPixels {
-	margin-bottom:16px;
-}
-.textGray {color:#5a5a59;}
-.linkGray, .linkGray a {color:#595959;font-family:"helvetica";text-decoration:none;}
-.labelsLink, .labelsLink a {color:#595959;text-decoration:none;}
-.linkOrange, .linkOrange a {color:#ee6457;font-weight:800;text-decoration:none;}
-.linkPink, .linkPink a {color:#fcb6a7;font-weight:800;text-decoration:none;}
-
-
-@media only screen and (min-width: 768px) and (max-width: 959px) {
-
-}
-@media only screen and (min-width: 611px) and (max-width: 767px) {
-
-}
-@media only screen and (min-width: 480px) and (max-width: 610px) {
-
-}
-@media only screen and (max-width: 479px) {
-
+body {
+	background:#f5f5f5;
 }
