--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -5,9 +5,6 @@ Author: aether_
 Author URI: http://www.aetherdesign.net
 */
 
-@import "reset.css";
-@import "grid.css";
-
 /* Table of Contents
 ==================================================
     #Navigation
@@ -29,6 +26,10 @@ Author URI: http://www.aetherdesign.net
     #Media Queries
     
 */
+
+	body {
+		background:#f5f5f5;
+	}
 
 /* #Navigation
 ================================================== */
@@ -83,6 +84,9 @@ Author URI: http://www.aetherdesign.net
 		color: white;
 		background: #212a30;
 	}
+	
+	.socialNavContainer {position:absolute;margin:12px 0px 0px 90px;}
+	.socialNavButton {margin-left:5px;}
 
 	/* Mobile */
 	#mobile-nav {
