--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
-<div class="homepageHeader">
-	<div class="introTextText">
+<div id="intro" class="container twelve columns">
+
+	<!-- Heading -->
+	<div id="title" class="six columns">
 		<strong>Hello.</strong> My name is Ed Hamilton. I release <span class="linkOrange"><%= link_to 'music', root_path %></span> on 
 		<span class="labelsLink"><%= link_to 'Hibernate', root_path %></span> &amp; <span class="labelsLink"><%= link_to 'Futuresequence', root_path %>.
-		<br />I also take <span class="linkOrange"><%= link_to 'photographs' %></span> &amp; <span class="linkOrange"><%= link_to 'build websites', root_path %></span>.
-	</div>
-	<div class="readMore">
+		<br />I also take <span class="linkOrange"><%= link_to 'photographs' %></span> &amp; <span class="linkOrange"><%= link_to 'build websites', root_path %></span>
 		<%= link_to image_tag('readmore.png'), root_path %>
 		<div style="padding-top:15px;">
 			<% if user_signed_in? %>
@@ -12,9 +12,55 @@
 			<% end %>
 		</div>
 	</div>
-	<div class="rightPhoto">
-		<%= image_tag(@homepost.rightimage(:thumb)) rescue nil %>
-	</div>
+
+</div><!-- END CONTAINER -->
+
+<div class="light-background">
+
+	<!-- Call to Action -->
+	<div id="call-to-action" class="container">
+		<h1 class="twelve columns">Introducing Mint</h1>
+		<p class="sub-heading five columns">Mint is multi-purpose. The basics are covered - corporate site, designer portfolio and app showcase.</p>
+		<a class="button" href="#" target="_blank">Buy it now <span class="button-arrow">→</span></a>
+	</div><!-- END CONTAINER -->
+
+</div>
+
+<div class="dark-background">
+
+	<!-- Overview -->
+	<ul id="overview" class="container">
+		<li class="four columns">
+			<div class="block clearfix">
+				<span class="icon"><%= image_tag('overview1.png') %></span>
+				<h3 class="title">Easy setup</h3>
+				<p class="description">Mint is easy to set up. In a few quick modifications you can customize it to fit your needs. The documentation will guide you through the process.</p>
+			</div>	
+		</li>
+		<li class="four columns">
+			<div class="block clearfix">
+				<span class="icon"><%= image_tag('overview2.png') %></span>
+				<h3 class="title">Super support</h3>
+				<p class="description">We offer our products with confidence, because we know that there will be no dissapointment at the stage where the customer needs our help.</p>
+			</div>	
+		</li>
+		<li class="four columns">
+			<div class="block clearfix">
+				<span class="icon"><%= image_tag('overview3.png') %></span>
+				<h3 class="title">Clean code</h3>
+				<p class="description">Fully validated code. We make sure to help you not only with the guide for the setup but  with the code as well - fully commented and structured.</p>
+			</div>	
+		</li>
+	</ul><!-- END CONATINER -->
+
+</div>
+
+<div id="intro" class="container">
+		
+		
+		<div class="rightPhoto">
+			<%= image_tag(@homepost.rightimage(:thumb)) rescue nil %>
+		</div>
 </div>
 <div class="homepageContent">
 	<div class="latestPhoto">
@@ -39,4 +85,4 @@
 	   		<p><%= @homepost.url3.html_safe rescue nil %></p>
 	 	</div>
 	</div>
-</div>
+</div
