main theme working

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div id="intro" class="container twelve columns">
 
 	<!-- Heading -->
-	<div id="title" class="six columns">
+	<div id="title" class="introText six columns">
 		<strong>Hello.</strong> My name is Ed Hamilton. I release <span class="linkOrange"><%= link_to 'music', root_path %></span> on 
 		<span class="labelsLink"><%= link_to 'Hibernate', root_path %></span> &amp; <span class="labelsLink"><%= link_to 'Futuresequence', root_path %>.
 		<br />I also take <span class="linkOrange"><%= link_to 'photographs' %></span> &amp; <span class="linkOrange"><%= link_to 'build websites', root_path %></span>
