--- a/app/assets/stylesheets/shared.css
+++ b/app/assets/stylesheets/shared.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 /* CSS Document */
 
-body {
-	background:#f5f5f5;
-}
+body {background:#f5f5f5;}
+.introText {font-family:"brandon grotesque";margin:37px 0px 0px 0px;color:#5a5a59;font-weight:100;font-size:24px;line-height:32px;}
