--- a/app/views/layouts/_rulers.html.erb
+++ b/app/views/layouts/_rulers.html.erb
@@ -1,4 +1,15 @@
-<div class="rulers">
-	<div class="left"><%= image_tag('leftbar.png') %></div>
-	<div class="right"><%= image_tag('rightbar.png') %></div>
+<div class="container twelve columns">
+	<div class="mainContent">
+		<ul id="overview" class="container rulers">
+			<li class="seven columns">
+				<div class="clearfix">
+					<div class="left">&nbsp;</div>
+				</div>	
+			</li>
+			<li class="five columns">
+				<div class="clearfix">
+					<div class="right">&nbsp;</div>
+				</div>	
+			</li>
+		</ul>
 </div>
