--- a/app/views/layouts/_rulers.html.erb
+++ b/app/views/layouts/_rulers.html.erb
@@ -1,12 +1,12 @@
 <div class="container twelve columns">
 	<div class="mainContent">
 		<ul id="overview" class="container rulers">
-			<li class="seven columns">
+			<li class="four columns">
 				<div class="clearfix">
 					<div class="left">&nbsp;</div>
 				</div>	
 			</li>
-			<li class="five columns">
+			<li class="eight columns">
 				<div class="clearfix">
 					<div class="right">&nbsp;</div>
 				</div>	
