--- a/app/assets/stylesheets/elements.css
+++ b/app/assets/stylesheets/elements.css
@@ -263,6 +263,9 @@ Author URI: http://www.aetherdesign.net
 	#tab-1, #tab-2, #tab-3 {
 		width:432px;
 	}
+	#tab-11, #tab-12, #tab-13, #tab-14, #tab-15 {
+		height:210px;
+	}
 
 
 
@@ -426,13 +429,13 @@ Author URI: http://www.aetherdesign.net
         
     .form-field {
         width: 100%;
-        margin-bottom: 20px;
+        margin:0px 0px 20px 0px;
     }
     
     .form-field label {
         display: block;
         margin-bottom: 10px;
-        padding-bottom: 20px;
+        padding-bottom: 2px;
         border-bottom: 1px solid #d2e8ff;
     }
 
@@ -440,7 +443,7 @@ Author URI: http://www.aetherdesign.net
         border: none;
         outline: none;
         padding: 10px;
-        margin-top: 10px;
+        margin-top:5px;
         width: 100%;
         height: 35px;
         background: #fff;
@@ -451,6 +454,25 @@ Author URI: http://www.aetherdesign.net
         color: #949494;
     }
     
+	.text-area, .text-areaArea {
+        border: none;
+        outline: none;
+        padding: 10px;
+        margin-top:5px;
+        width: 100%;
+        height: 35px;
+        background: #faffbd;
+        -webkit-appearance: none;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+        color: #000000;
+    }
+
+	.text-areaArea {
+		height:340px;
+	}
+
     .form-field span textarea {
         overflow: auto;
         height: 180px;
@@ -475,7 +497,8 @@ Author URI: http://www.aetherdesign.net
         color: #fff;
         background: #ef1c00;
         line-height: 12px;
-        padding: 15px;
+        padding:15px;
+		margin: 0px;
     }
 
      .form-click input:hover { text-decoration: none; color: #fff!important; background: #b80b00; }
