--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,24 @@
-<h2>Change your password</h2>
+<div class="container mainContent twelve columns">
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+	<ul id="overview" class="container">
+		<div class="block clearfix six columns offset-by-three height">
+			<h3 class="title">Change your password</h3>
+			<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
+				<%= devise_error_messages! %>
+				<%= f.hidden_field :reset_password_token %>
+		  		
+				<div class="form-field">
+					<%= f.label :password, "New password" %>
+		  			<%= f.password_field :password, :autofocus => true, :class => "name" %>
+				</div>
+				<div class="form-field">
+		  			<%= f.label :password_confirmation, "Confirm new password" %>
+					  <%= f.password_field :password_confirmation, :class => "name" %>
 
-  <div><%= f.label :password, "New password" %><br />
-  <%= f.password_field :password, :autofocus => true %></div>
-
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Change my password" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+		  		<div class="form-click"><%= f.submit "Change my password" %></div>
+				<%= render "devise/shared/links" %>
+			<% end %>
+		</div>
+	</ul>
+		
+</div>
