--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,27 +1,33 @@
-<div class="formText formFade">
-	
-	<p class="formHeader">Edit User</p>
+<div class="mainContent">
+	<ul id="overview" class="container">
+		<div class="block two columns marginator">
+			<h3 class="title">Edit User</h3>
+		</div>
 
-	<div class="form">
-		<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  			<%= devise_error_messages! %>
+		<div class="block clearfix six columns offset-by-two height3">
+			<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+	  			<%= devise_error_messages! %>
+		  		
+					<div class="form-field">
+						<%= f.label :email %>
+			  			<%= f.email_field :email, :autofocus => true, class: 'email text-area' %><br />
+					</div>
+					<div class="form-field">
+			  			<%= f.label :password %>
+			  			<%= f.password_field :password, class: 'name text-area' %><br />
+					</div>
+					<div class="form-field">
+						<%= f.label :password_confirmation %>
+		  				<%= f.password_field :password_confirmation, class: 'email text-area' %><br />
+					</div>
+					<div class="form-field">
+						<%= f.label :current_password %>
+			  			<%= f.password_field :current_password, class: 'name text-area' %><br /><br />
+					</div>
 
-  			<%= f.label :email, class: 'formField' %>
-  			<%= f.email_field :email, :autofocus => true, class: 'formFieldT'  %>
-
-  			<%= f.label :password, class: 'formField' %> <i>(leave blank if you don't want to change it)</i>
-  			<%= f.password_field :password, :autocomplete => "off", class: 'formFieldT'  %>
-
-  			<%= f.label :password_confirmation, class: 'formField' %>
-  			<%= f.password_field :password_confirmation, class: 'formFieldT'  %>
-			
-  			<%= f.label :current_password, class: 'formField' %> <i>(we need your current password to confirm your changes)</i>
-  			<%= f.password_field :current_password, class: 'formFieldT'  %><br />
-
-  			<%= f.submit "Update" %>
-		<% end %>
-
-		<%= link_to "Back", :back %><br /><br />
+			  		<div class="form-click"><%= f.submit "Update", :id => "submit", :class => "upMore" %></div>
+			<% end %>
+		</div>
+	</ul>
 		
-	</div>
 </div>
