--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,19 +1,28 @@
-<div class="formText formFade">
-	<p class="formHeader">Sign up</p>
-	<div class="form">
-		<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  			<%= devise_error_messages! %>
+<div class="mainContent">
 
-  			<%= f.label :email, class: 'formField' %>
-  			<%= f.email_field :email, :autofocus => true, class: 'formFieldT2' %><br />
+	<ul id="overview" class="container">
+		<div class="block two columns marginator">
+			<h3 class="title">Sign Up</h3>
+		</div>
+		<div class="block clearfix six columns offset-by-two height3">
+			<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+	  			<%= devise_error_messages! %>
+		  		
+				<div class="form-field">
+					<%= f.label :email %>
+		  			<%= f.email_field :email, class => 'name text-area' %><br />
+				</div>
+				<div class="form-field">
+		  			<%= f.label :password %>
+		  			<%= f.password_field :password, class: 'name text-area' %><br />
+				</div>
+				<div class="form-field">
+		  			<%= f.label :password_confirmation %>
+		  			<%= f.password_field :password_confirmation, class: 'name text-area' %><br /><br />
+				</div>
+		  		<div class="form-click"><%= f.submit "Sign up", :id => "submit" %></div>
+			<% end %>
+		</div>
+	</ul>
 
-  			<%= f.label :password, class: 'formField' %>
-  			<%= f.password_field :password, class: 'formFieldT2' %><br />
-
-  			<%= f.label :password_confirmation, class: 'formField' %>
-  			<%= f.password_field :password_confirmation, class: 'formFieldT2' %><br /><br />
-
-  			<div><%= f.submit "Sign up" %></div>
-		<% end %>
-	</div>
 </div>
