--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
 		  		
 				<div class="form-field">
 					<%= f.label :email %>
-		  			<%= f.email_field :email, class => 'name text-area' %><br />
+		  			<%= f.text_field :email, class: 'name text-area' %><br />
 				</div>
 				<div class="form-field">
 		  			<%= f.label :password %>
