--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,42 +1,320 @@
 <!DOCTYPE html>
-<html>
+<!-- saved from url=(0015)http://kvng.co/ -->
+<html class="js no-touch svg inlinesvg svgclippaths no-ie8compat" lang="en">
 	<head>
-		<title>Ed Hamilton</title>
-  
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-  		<meta name="author" cotent="eghamilton.co.uk" />
-  		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		
-		<!--<link rel="shortcut icon" href="favicon.ico">
-		<link rel="apple-touch-icon" href="apple-touch-icon.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">-->
-
-		<!--[if lt IE 9]>
-			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-
-		<!-- Fonts -->
-		<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
- 
- 		<%= stylesheet_link_tag "application" %>
-		<%= javascript_include_tag "application" %>
-		<%= csrf_meta_tags %>
-  
-	</head>
-	
-	<body>
-		
-		
-		
-		<div id="myHead"><%= render 'layouts/header' %></div>
-		<div class="page">
-		<div><%= yield %></div><br />
-		<div id="rulers"><%= render 'layouts/rulers' %></div>
-		<div><%= render 'layouts/footer' %></div>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	    <meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <title>Ed Hamilton | Musician</title>
+	    <meta name="description" content="">
+	    <meta name="keywords" content="">
+	    <meta name="robots" content="">
+	    <link rel="shortcut icon" href="assets/icon.ico">
+	    <div class="fit-vids-style">­<style>.fluid-width-video-wrapper {width: 100%;position: relative;padding: 0;}.fluid-width-video-wrapper iframe,.fluid-width-video-wrapper object,.fluid-width-video-wrapper embed {position: absolute;top: 0;left: 0;width: 100%;height: 100%;}</style>
 		</div>
+		<script src="assets/modernizr.js"></script>
+		<link rel="stylesheet" href="assets/bootstrap.css">
+	    <link rel="stylesheet" href="assets/bootstrap-theme.css">
+	    <link rel="stylesheet" href="assets/foundation.css">
+	    <link rel="stylesheet" href="assets/main.css">
+		<script type="text/javascript" src="assets/423299160645709824"></script>
+		<link href='http://fonts.googleapis.com/css?family=Raleway:400,500,700|Open+Sans:300,700' rel='stylesheet' type='text/css'>
+	</head>
+  
+	<body class="">
+
+ 	 <div id="preloader" style="display: none;">
+	      <div id="status" style="display: none;">
+	      <div class="fadeInDown">
+	      <img src="assets/logo_black.png" alt="">
+	      </div>
+	      </div>
+	  </div>
+ 
+	  	<div class="menu">
+	  		<div class="main-menu">
+	  			<ul>
+	  				<li><a data-toggle="modal" data-target="#arabesque">Arabesque</a></li>
+	  				<li><a data-toggle="modal" data-target="#sfs">Sketches for Skomer</a></li>
+	  				<li><a data-toggle="modal" data-target="#btc">Behind the Clouds (for Zoe)</a></li>
+	  			</ul>
+	  		</div>
+	  	</div>
+ 	
+	  	<div class="show-for-small">
+	  		<nav class="top-nav">
+	  			<div class="row">
+	  				<div class="small-2 columns">
+	  					<div id="logo-small" class="white">
+	  						<a href="#">ED HAMILTON</a>
+	  					</div>  
+	  				</div>
+	  				<div class="large-6 medium-8 small-10 columns">
+	  					<div id="button-wrapper">
+	  						<button type="button" role="button" aria-label="Toggle Navigation" class="lines-button x" data-reveal-id="mobile-menu">
+	  							<span class="lines-white"></span>
+	  						</button>
+	  					</div>
+	  				</div>
+	  			</div>
+	  		</nav> 
+	  	</div>
+ 	
+	  	<div class="hide-for-small">
+	  		  <header>
+	  		  	<div class="row">
+	  		  		<div class="small-2 columns">
+	  		  			<div id="logo">
+	  		  				<a href="#">Ed Hamilton</a>
+	  		  			</div>  
+	  		  		</div>
+	  		  		<nav class="large-7 large-offset-3 medium-8 medium-offset-2 small-10 columns">
+	  			  		<div class="hide-for-small">
+	  			  		  <ul id="header-nav">
+	  			  		  <li><a data-toggle="modal" data-target="#arabesque">Arabesque</a></li>
+	  			  		  <li><a data-toggle="modal" data-target="#sfs">Sketches For Skomer</a></li>
+	  			  		  <li><a data-toggle="modal" data-target="#btc">Behind The Clouds (for Zoe)</a></li>
+	  			  		  </ul>
+	  			  		  </div>
+	  		  		</nav>
+	  		  	</div>
+	  		  </header>
+	  	</div>  	
+ 	
+	  	<section id="splash">
+			<div id="splashcontent">
+	
+				<div class="row">
+				  <div class="large-10 medium-12 small-centered columns">
+				    <h1>Hi, I'm Ed. I'm a musician from London making small sounds for the quiet hours. You can hear some of my work below...</h1>
+				    <div id="arrow-container">
+				    	<svg version="1.1" id="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100">
+				    	<g>
+				    		<path d="M45.7,69.4c-1.2-1.2-1.2-3.1,0-4.2l36.7-36.8c1.2-1.2,3.1-1.2,4.2,0l2.1,2.1c1.2,1.2,1.2,3.1,0,4.2L52.1,71.6
+				    			c-1.2,1.2-3.1,1.2-4.2,0L45.7,69.4z"></path>
+				    	</g>
+				    	<g>
+				    		<path d="M13.3,28.4c1.2-1.2,3.1-1.2,4.2,0l36.8,36.7c1.2,1.2,1.2,3.1,0,4.2l-2.1,2.1c-1.2,1.2-3.1,1.2-4.2,0L11.1,34.8
+				    			c-1.2-1.2-1.2-3.1,0-4.2L13.3,28.4z"></path>
+				    	</g>
+				    	</svg>
+		    	
+				    </div>
+				  </div>
+				</div>
+			</div>
+		</section>  
+
+		<div class="index-wrapper">
+			<div class="feature-thumbnails">
+			<div class="row">
+				<div class="large-4 medium-4 columns">
+					<a class="project-thumbnail" data-toggle="modal" data-target="#arabesque">
+						<img src="assets/arabesque.png" alt="">
+						<div class="project-hover-wrapper">
+							<div class="project-hover">
+								<h1>Arabesque</h1>
+								<p>Coming soon on Futuresequence</p>
+							</div>
+						</div>
+					</a>
+				</div>
+				<div class="large-4 medium-4 columns">
+					<a class="project-thumbnail" data-toggle="modal" data-target="#sfs">
+						<img src="assets/sfs.png" alt="">
+						<div class="project-hover-wrapper">
+							<div class="project-hover">
+								<h1>Sketches for Skomer</h1>
+								<p>Released 2013 by Futuresequence</p>
+							</div>
+						</div>
+					</a>
+				</div>
+		    	<div class="large-4 medium-4 columns">
+		    		<a class="project-thumbnail" data-toggle="modal" data-target="#btc">
+		    			<img src="assets/btc.png" alt="">
+		    			<div class="project-hover-wrapper">
+		    				<div class="project-hover">
+		    					<h1>Behind the Clouds (for Zoe)</h1>
+		    					<p>Released 2011 on Hibernate</p>
+		    				</div>
+		    			</div>
+		    		</a>
+		    	</div>
+		    </div>
+
+			<!-- Modal -->
+			<div class="modal fade" id="arabesque" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			  <div class="modal-dialog">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <h4 class="modal-title" id="myModalLabel">Arabesque</h4>
+			      </div>
+			      <div class="modal-body">
+					<div class="quote">
+						"Hamilton really does have something new to bring to the table, his rhythmic innovations 
+						breathing a fresh vitality into a familiar sound and helping to create an atmosphere that is immediately 
+						present rather than wistfully remembered. It’s also a remarkably assured and mature-sounding release, given that it’s 
+						his album debut."
+					</div><h4> - Fluid Radio</h4><br/><br/>
+			        <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/7884560%3Fsecret_token%3Ds-FMQjs&amp;auto_play=false&amp;hide_related=false&amp;show_playcount=false&amp;show_user=false&amp;show_artwork=false&amp;visual=true&amp;show_track=false"></iframe>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+			<!-- Modal -->
+			<div class="modal fade" id="sfs" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			  <div class="modal-dialog">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <h4 class="modal-title" id="myModalLabel">Sketches for Skomer</h4>
+			      </div>
+			      <div class="modal-body">
+			        <div class="quote">
+						"Hamilton really does have something new to bring to the table, his rhythmic innovations 
+						breathing a fresh vitality into a familiar sound and helping to create an atmosphere that is immediately 
+						present rather than wistfully remembered. It’s also a remarkably assured and mature-sounding release, given that it’s 
+						his album debut."
+					</div><h4> - Fluid Radio</h4><br/><br/>
+					<iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/7880315&amp;auto_play=false&amp;hide_related=false&amp;show_playcount=false&amp;show_user=false&amp;show_artwork=false&amp;visual=true&amp;show_track=false"></iframe>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+			<!-- Modal -->
+			<div class="modal fade" id="btc" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+			  <div class="modal-dialog">
+			    <div class="modal-content">
+			      <div class="modal-header">
+			        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			        <h4 class="modal-title" id="myModalLabel">Behind the clouds (for Zoe)</h4>
+			      </div>
+			      <div class="modal-body">
+					<div class="quote">
+						"Hamilton really does have something new to bring to the table, his rhythmic innovations 
+						breathing a fresh vitality into a familiar sound and helping to create an atmosphere that is immediately 
+						present rather than wistfully remembered. It’s also a remarkably assured and mature-sounding release, given that it’s 
+						his album debut."
+					</div><h4> - Fluid Radio</h4><br/><br/>
+			        <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/4005496&amp;auto_play=false&amp;hide_related=false&amp;show_playcount=false&amp;show_user=false&amp;show_artwork=false&amp;visual=true&amp;show_track=false"></iframe>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+	    </div>
+	 </div>
+  
+	<footer>
+	<div class="hide-for-small">
+	<div class="row">
+		<div id="footer-content">
+	    	<div class="large-2 medium-2 columns">
+	    		<ul>
+	    		<li><a href="mailto:ed_hamilton@live.com" target="_blank">Email</a></li>
+	    		<li><a href="https://twitter.com/kvng" target="_blank">Twitter</a></li>
+	    		<li><a href="http://instagram.com/kvngco" target="_blank">Instagram</a></li>
+	    		</ul>
+	    	</div>
+	    	<div class="large-2 medium-2 columns">
+	    	</div>
+	    	<div class="large-6 medium-6 large-offset-1 medium-offset-1 columns"></div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="large-2 medium-2 small-6 columns">
+			<ul>
+			<li>© 2014 madebyeggs</li>
+			</ul>
+		</div>
+		<div class="hide-for-small">
+	    	<div class="large-6 medium-6 large-offset-3 medium-offset-3 columns">
+	    	</div>
+	    	<div class="large-1 medium-1 columns">
+				<div id="to-top-arrow">
+				<img src="assets/arrow.png" class="topLink">
+				</div>
+	    	</div>
+		</div>
+		<div class="show-for-small">
+	    	<div class="large-2 medium-2 small-6 columns">
+		    	<div id="back-to-top">
+			    	<ul class="topLink">
+			    		<li>Back to top ↑</li>
+			    	</ul>
+		    	</div>
+	    	</div>
+		</div>
+	</div>
+	</footer>	<script src="assets/jquery.js"></script>
+		<script src="assets/foundation.min.js"></script>
+		<script src="assets/index.js"></script>
+		<script src="assets/jquery.fitvids.js"></script>
+		<script type="text/javascript" src="assets/bootstrap.js"></script>
+	    <script>
+	      $(window).load(function() {               $('#status').fadeOut('slow');               $('#preloader').delay(350).fadeOut('slow');
+	      });	
+	      $(document).foundation();
+	      $(document).ready(function () {
+	          // Handler for .ready() called.
+	          $('#arrow-container').click(function () {
+	              $('html, body').animate({
+	                  scrollTop: $('.index-wrapper').offset().top
+	              }, 800);
+	          });
+	      });
+	      $(document).ready(function() {
+	      	$(".topLink").click(function() {
+	      		$("html, body").animate({
+	      			scrollTop: 0	
+	      		}, {
+	      			duration: 800,
+	      			easing: "swing"
+	      		});
+	      		return false;
+	      	});
+     
+	      });
+	      $(document).ready(function() {
+     
+	      	$("a").each(function () {
+	      	    if (this.hostname != document.location.hostname) this.target = "_blank";
+	      	});
+     	
+	      });
+	      $(document).ready(function() {
+     
+	          var anchor = document.querySelectorAll('#button-wrapper button');
+         
+	          [].forEach.call(anchor, function(anchor){
+	            var open = false;
+	            anchor.onclick = function(event){
+	              event.preventDefault();
+	              if(!open){
+	                $('#splash button').addClass('button-fixed');
+	                this.classList.add('close');
+	                open = true;
+	                $('.menu').addClass('openmenu');
+	                $('html, body').addClass('fix-body');
+	                $('body').bind('touchmove', function(e){e.preventDefault()})
+	              }
+	              else{
+	                $('#splash button').removeClass('button-fixed');
+	                this.classList.remove('close');
+	                open = false;
+	                $('.menu').removeClass('openmenu');
+	                $('html, body').removeClass('fix-body');
+	                $('body').unbind('touchmove')
+	              }
+	            }
+	          }); 
+	        });
+	        $(document).ready(function(){
+	          // Target your .container, .wrapper, .post, etc.
+	          $("#adismalaffair").fitVids();
+	        });
+	    </script>
 
 	</body>
 </html>
