--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -213,8 +213,8 @@
 	    	<div class="large-2 medium-2 columns">
 	    		<ul>
 	    		<li><a href="mailto:ed_hamilton@live.com" target="_blank">Email</a></li>
-	    		<li><a href="https://twitter.com/kvng" target="_blank">Twitter</a></li>
-	    		<li><a href="http://instagram.com/kvngco" target="_blank">Instagram</a></li>
+	    		<li><a href="https://twitter.com/ed_hamilton812" target="_blank">Twitter</a></li>
+	    		<li><a href="http://instagram.com/ed_hamilton812" target="_blank">Instagram</a></li>
 	    		</ul>
 	    	</div>
 	    	<div class="large-2 medium-2 columns">
