css and js made rails friendly

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,13 +3,8 @@
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
 
- *= require cms
- *= require_self
- *= require project-slider
- *= require reset
- *= require grid
- *= require style
- *= require slider
- *= require elements
- *= require ui
+ *= require bootstrap
+ *= require bootstrap-theme
+ *= require foundation
+ *= require main
 */
